--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,7 @@ services:
     ports:
       - "9000:9000"
     volumes:
-      - ./:/var/www
+      - ./app:/var/www
     networks:
       - app
 
